Add new webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 
 <div><strong>Name of Members</strong></div>
 <ul>
-<li>Full Name #1</li>
-<li>Full Name #2</li>
-<li>Full Name #3</li>
+<li>Milmarie Joy L. Uy</li>
+<li>Laurice B. Tapia</li>
+
 </ul>
 
 <br>
