--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <div><strong>Name of Members</strong></div>
 <ul>
 <li>Milmarie Joy L. Uy</li>
-<li>Laurice B. Tapia</li>
+<li>Laurice Batumbakal Tapia</li>
 
 </ul>
 
